--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                <a href="https://www.instagram.com/fe_raiss/"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
                 <a href="https://web.facebook.com/groups/1110694519644234"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
                 <a href="https://www.linkedin.com/in/fakhar-eddine-erraiss-3bb926254/"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
-                <a href="https://twitter.com/f_raiss"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
+                <a href="https://twitter.com/ZombieSquadNft"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
 
             </div>
             <!--Social Media Links end-->
